Gm4cArtefatos/openshift/jaeger.yaml
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "jaeger"
  namespace: tef
spec:
  selector:
    matchLabels: 
      name: "jaeger"
  template: 
    metadata:
      labels:
        name: "jaeger"      
    spec:
      containers:
        - name: "jaeger"
          image: "jaegertracing/all-in-one:latest"
          ports:
            - containerPort: 5775 
              name: "porta1"
              protocol: UDP
            - containerPort: 6831
              name: "coletor"
              protocol: UDP
            - containerPort: 6832
              name: "coletorp2"
              protocol: UDP
            - containerPort: 5778 
              name: "p2"
            - containerPort: 16686
              name: "porta5"
            - containerPort: 14268
              name: "p4"
            - containerPort: 9411
              name: "zipkin"
  replicas: 1
