Gm4cArtefatos/openshift/cassandra-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra-svc
  namespace: tef
  labels:
    app: cassandra
spec:
  ports:
  - port: 7000 
    name: porta1
    protocol: TCP
    targetPort: 7000
  - port: 9042
    name: porta2
    protocol: TCP
    targetPort: 9042
  selector:
    app: cassandra
