Gm4cArtefatos/openshift/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: tef
  labels:
    app: grafana
spec:
  ports:
  - port: 3000
    name: porta1
    protocol: TCP
    targetPort: 3000
  selector:
    name: grafana
