Gm4cArtefatos/openshift/kafka-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: tef
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: porta1
    protocol: TCP
    targetPort: 9092
  - port: 3030
    name: porta2
    protocol: TCP
    targetPort: 3030
  - port: 2181
    name: porta3
    protocol: TCP
    targetPort: 2181
  - port: 8081
    name: register
    protocol: TCP
    targetPort: 8081
  selector:
    app: kafka
