Gm4cArtefatos/openshift/limite-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: limite-svc
  labels:
    app: gm4c-limite
spec:
  ports:
  - port: 9001
    name: porta1
    protocol: TCP
    targetPort: 9001
  selector:
    app: gm4c-limite
