Gm4cArtefatos/openshift/redis.yaml
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "redis"
  namespace: tef
spec:
  selector:
    matchLabels: 
      name: "redis"
  template: 
    metadata:
      labels:
        name: "redis"      
    spec:
      containers:
        - name: "redis"
          image: "redis:alpine"
          ports:
            - containerPort: 6379
              name: "p1"
          volumeMounts:
            - mountPath: "/data"
              name: redis-pv             
      volumes:
        - name: redis-pv
          persistentVolumeClaim:
            claimName: redis-pv
  replicas: 1 
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: tef
  labels:
    name: redis
spec:
  ports:
  - port: 6379
    name: porta1
    protocol: TCP
    targetPort: 6379
  selector:
    name: redis
