Gm4cArtefatos/openshift/senha-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: senha-svc
  labels:
    app: gm4c-senha
spec:
  ports:
  - port: 9003
    name: porta1
    protocol: TCP
    targetPort: 9003
  selector:
    app: gm4c-senha
