Gm4cArtefatos/openshift/jaeger-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jaeger
  namespace: tef
  labels:
    app: jaeger
spec:
  to:
    kind: Service
    name: jaeger-svc
    weight: 100
  port:
    targetPort: porta5
  wildcardPolicy: None
